# Robotic

./: README.md
src/control/: CMakeLists.txt  package.xml
src/control/src/: BallControl.cpp  BallPositionPublisher.py
src/gazebo_files/: CMakeLists.txt  package.xml
src/gazebo_files/launch/: myrobot_world.launch
src/gazebo_files/urdf/: myrobot_descr.gazebo  myrobot_descr.xacro
src/gazebo_files/worlds/: project.world
src/launch_files/: CMakeLists.txt  package.xml
src/launch_files/launch/: gazebo.launch  nodes.launch
src/map/: CMakeLists.txt  package.xml
src/map/launch/: map.launch
src/vision/: CMakeLists.txt  package.xml  setup.py
src/vision/src/: ball_detection.py  renkler
