<?xml version="1.0"?>
<package format="2">
  <name>gazebo_files</name>
  <version>0.0.0</version>
  <description>Gazebo</description>
  <maintainer email="todo@todo.todo">todo</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <export>
  </export>
</package>
